Added variable z-offset (ship moves futher awaay from finger at the top of the screen) + minor fixes and cleanup.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -107,6 +107,7 @@
      <Compile Include="Assets\Scripts\Rockets.cs" />
      <Compile Include="Assets\Scripts\Shot.cs" />
      <Compile Include="Assets\Scripts\SingleFormationManager.cs" />
+     <Compile Include="Assets\Scripts\Volley.cs" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap.shader" />
