I'm in refactoring hell. Added a whole lot of new functionality in the player shooting system but the enemy shots have a bug in them now.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -81,6 +81,7 @@
      <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\FixedJoystick.cs" />
      <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\FloatingJoystick.cs" />
      <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\VariableJoystick.cs" />
+     <Compile Include="Assets\Scripts\AngularShootingPoints.cs" />
      <Compile Include="Assets\Scripts\CanGetShot.cs" />
      <Compile Include="Assets\Scripts\CollisionDetection.cs" />
      <Compile Include="Assets\Scripts\ControlEngineFlame.cs" />
@@ -92,22 +93,29 @@
      <Compile Include="Assets\Scripts\Event.cs" />
      <Compile Include="Assets\Scripts\ExplosionEffect.cs" />
      <Compile Include="Assets\Scripts\Explosions.cs" />
+     <Compile Include="Assets\Scripts\FireInputManager.cs" />
+     <Compile Include="Assets\Scripts\FiringManager.cs" />
      <Compile Include="Assets\Scripts\Formation.cs" />
      <Compile Include="Assets\Scripts\FormationContainer.cs" />
-     <Compile Include="Assets\Scripts\ForwardMotion.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\HealthDisplay.cs" />
+     <Compile Include="Assets\Scripts\Homing.cs" />
      <Compile Include="Assets\Scripts\IExplode.cs" />
      <Compile Include="Assets\Scripts\IpooledObject.cs" />
+     <Compile Include="Assets\Scripts\IshootingPoints.cs" />
      <Compile Include="Assets\Scripts\Lasers.cs" />
-     <Compile Include="Assets\Scripts\Launcher.cs" />
+     <Compile Include="Assets\Scripts\ManualShootingPoints.cs" />
      <Compile Include="Assets\Scripts\MinMaxAttribute.cs" />
      <Compile Include="Assets\Scripts\ObjectPooler.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
-     <Compile Include="Assets\Scripts\Rocket.cs" />
+     <Compile Include="Assets\Scripts\ShootingLogic.cs" />
+     <Compile Include="Assets\Scripts\ShootingPoints.cs" />
      <Compile Include="Assets\Scripts\Shot.cs" />
+     <Compile Include="Assets\Scripts\SimpleShot.cs" />
      <Compile Include="Assets\Scripts\SingleFormationManager.cs" />
+     <Compile Include="Assets\Scripts\Testing.cs" />
      <Compile Include="Assets\Scripts\Volley.cs" />
+     <Compile Include="Assets\Scripts\VolleySettings.cs" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap.shader" />
